Testade error handling

--- a/ChalkboardChat.UI/Pages/Account/Login.cshtml
+++ b/ChalkboardChat.UI/Pages/Account/Login.cshtml
@@ -4,18 +4,15 @@
 }
 
 <form method="post">
-	<input type="text" placeholder="Username" asp-for="Username" />
-	<input type="password" placeholder="Password" asp-for="Password" />
-	<input type="submit" value="Log In" />
+	<input type="text" placeholder="Username" asp-for="Username"/>
+	<input type="password" placeholder="Password" asp-for="Password"/>
+	<input type="submit" value="Log In"/>
 </form>
 
-@* @if (Model.Username.Contains(Username) && Model.Password.Contains(password))
+@*Testar*@
+@* @if (TempData["error"] != null)
 {
-	<h1>Succesfully logged in!</h1>
-}
-else
-{
-	<h1>Incorrect username or password!</h1>
-	<h2>Try again!</h2>
+    <p>@TempData["error"]</p>
 } *@
+
 
