La till error message och grundlig funktionalitet för Messages-sidan

--- a/ChalkboardChat.UI/Pages/Account/Login.cshtml
+++ b/ChalkboardChat.UI/Pages/Account/Login.cshtml
@@ -9,10 +9,7 @@
 	<input type="submit" value="Log In"/>
 </form>
 
-@*Testar*@
-@* @if (TempData["error"] != null)
-{
-    <p>@TempData["error"]</p>
-} *@
 
-
+<div class="alert-danger">
+<span>@Model.ErrorMessage</span>
+</div>
