Header for dashboard / messages.cshtml

--- a/ChalkboardChat.UI/Pages/Member/Messages.cshtml
+++ b/ChalkboardChat.UI/Pages/Member/Messages.cshtml
@@ -7,7 +7,15 @@
 
 @if (signedInUser.IsSignedIn(User))
 {
+    <h1>Welcome @User.Identity.Name.ToLower()</h1>
+    <hr />
+
+    <h2>Enter your ideas for the Chalkboard below:</h2>
+
+    @* foreach()
+    { *@
     <div>
 
     </div>
+    }
 }
