måste få rida on board

--- a/ChalkboardChat.UI/Pages/Member/Messages.cshtml
+++ b/ChalkboardChat.UI/Pages/Member/Messages.cshtml
@@ -22,6 +22,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Post Message</button>
         </form>
+    </div>
   
     @* foreach()
     {
@@ -29,3 +30,4 @@
     </div>
     }*@
 }
+
