--- a/ChalkboardChat.UI/Pages/Member/Messages.cshtml
+++ b/ChalkboardChat.UI/Pages/Member/Messages.cshtml
@@ -55,6 +55,13 @@
         }
     </div>
 
+    <div>
+        <form method="post">
+            <button type="submit" class="btn btn-danger" asp-page-handler="DeleteUser">Delete User</button>
+        </form>
+    </div>
+
+
     <a asp-page="/Member/ManageUser">Go to Manage User</a>
 
 }
