--- a/ChalkboardChat.UI/Pages/Member/Messages.cshtml
+++ b/ChalkboardChat.UI/Pages/Member/Messages.cshtml
@@ -33,11 +33,11 @@
     <div>      
         @foreach (var message in Model.Messages)
         {
-            if(message.Username == User.Identity.Name)
+            if(message.UserId == Model.LoggedInUser.Id)
             {
                 
             <div class="message bg-info">
-                <p>@message.Username:</p>
+                <p>@Model.LoggedInUser.UserName:</p>
                 <p>@message.Message</p>
                     <p>Time postef: @message.Date.ToString("yy-MM-dd HH:mm")</p>
                 <hr />
